Ajout titre et paragraphe ESSAI

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
     <meta charset="utf-8" />
         <title>
-        
+        Fichier HTML
         </title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-	
+	<p>ESSAI</p>
     </body>
 </html>
 
