--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<p>ESSAI</p>
 	<p>Ceci est un essai</p>
 	<p>Et ceci est une modification</p>
+	<p>Et ceci est une modification</p>
     </body>
 </html>
 
